# Updated-Newer-Fresher-Version-3

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  103R.json  CHANGELOG.md  CMakeLists.txt  HOWTOBUILD.md  KNOWNBUGS.md  License.txt  README.md  TODO.md  bundle_tools.cmake  goals.md  imgui.ini  main.py  meson.build  meson.options  meson_options.txt  mess_list.csv  pyproject.toml  requirements.txt  setup.py  style.md  themes.py  vcpkg-configuration.json  vcpkg.json
.github/: build.yml
.github/workflows/: main.yml
Application/: TODO.md  __init__.py  billing.py  database.py  detect.py  image_procesing.py  image_processing.py  images.py  music.py  rename_rolls.py  schema.sql  search.py  search_scribbles.md  store.py  utils.py
Data/: data.db  database.db  messList.csv  schema.sql
Data/Workflows/: Add Yellow Tint.json  ColouredGarbage.json  SomeWeirdPurpley.json
GUI/: __init__.py  bill.py  fuckups.py  image.py  image_editor.py  music.py  tablez.py  utils.py
Graphene/: image_editor.py
Graphene/Graph/: __init__.py  colour_balance.py  enhancement_nodes.py  graph_abc.py  image_nodes.py  inspect_nodes.py  levels.py  merge.py  splitters.py
UNFV3_bundle/Data/: database.db  schema.sql
UNFV3_bundle/lib/: libbabl-0.1.so.0  libbabl-0.1.so.0.223.1  libgegl-0.4.so.0  libgegl-0.4.so.0.469.1  libjson-glib-1.0.so.0  libjson-glib-1.0.so.0.1000.8  liblcms2.so.2.0.18  libmvec.so.1
docs/: api.md  api_details.md  architecture.md  call_stacks.md  requirements.txt  search_engine.md  workflows.md
docs/source/: Application.rst  Billing.webm  DJ.webm  GUI.rst  Getting Started.rst  Search Syntax.rst  conf.py  getting_started.rst  index.rst  modules.rst
src/: main.cpp
src/Application/: CMakeLists.txt  application.h  custom_ops.cpp  custom_ops.h  database.cpp  database_search_engine.cpp  detection.cpp  detection.h  export_manager.cpp  google_drive.cpp  google_drive_browser.cpp  gpu_utils.cpp  gpu_utils.h  image.cpp  image.h  image_editor.cpp  image_editor.h  image_editor_ui.cpp  image_manager.cpp  portable_utils.h  search_engine.cpp  session.cpp  session_billed_ui.cpp  session_carousel_ui.cpp  session_image_ui.cpp  session_keyboard_nav.cpp  session_search_ui.cpp  stb_image_resize.h  ui.cpp
src/Application/include/: IconsFontAwesome6.h  database.h  detection.h  drive_browser_ui.h  export_manager.h  google_drive.h  google_drive_browser.h  gpu_utils.h  image.h  image_editor.h  image_manager.h  random_civ_6_quote.h  session.h  stb_image_write.h
src/Application/operations/: gimp_levels.cpp  my_colour_enhance.cpp  my_colour_enhance.h
subprojects/: SDL  opencv
tools/: detect_gegl_ops.py
triplets/: x64-linux-mixed.cmake
